Dev of auth module completed
